# mate-desktop-branding

./: README.md  meson.build  mkrelease.sh
env/: 60-mate-accessibility.sh
lightdm/: 30_mate_material.conf  40_mate_fortitude.conf  meson.build
schemas/: meson.build
schemas/fortitude/: meson.build  org.gnome.desktop.interface.gschema.override  org.mate.Marco.general.gschema.override  org.mate.background.gschema.override  org.mate.desktop.background.gschema.override  org.mate.desktop.interface.gschema.override  org.mate.interface.gschema.override  org.mate.panel.toplevel.gschema.override  x.dm.slick-greeter.gschema.override
schemas/livecd/: meson.build
schemas/mate/: meson.build  org.gnome.desktop.interface.gschema.override  org.mate.desktop.background.gschema.override  org.mate.desktop.font-rendering.gschema.override  org.mate.desktop.interface.gschema.override  org.mate.desktop.peripherals.mouse.gschema.override  org.mate.desktop.peripherals.touchpad.gschema.override  org.mate.peripherals-mouse.gschema.override  org.mate.power-manager.gschema.override
schemas/material/: meson.build  org.gnome.desktop.interface.gschema.override  org.mate.background.gschema.override  org.mate.desktop.background.gschema.override  org.mate.desktop.interface.gschema.override  org.mate.panel.toplevel.background.gschema.override  x.dm.slick-greeter.gschema.override
